--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    <item android:id="@+id/action_disconnecting" android:title="@string/disconnecting"
+        android:icon="@mipmap/disconnect"
+        android:orderInCategory="1" app:showAsAction="always" />
+    <item android:id="@+id/action_refresh" android:title="@string/refresh"
+        android:icon="@mipmap/refresh"
+        android:orderInCategory="2" app:showAsAction="always" />
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:icon="@mipmap/settings"
         android:orderInCategory="3" app:showAsAction="ifRoom" />
