--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$PlaceholderFragment">
+
     <FrameLayout
         android:id="@+id/fl"
         android:layout_width="fill_parent"
-        android:layout_height="140dip" >
+        android:layout_height="140dip">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vp"
@@ -21,7 +24,7 @@
             android:layout_gravity="bottom"
             android:background="#33000000"
             android:gravity="center"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_title"
@@ -34,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dip"
-                android:gravity="center" >
+                android:gravity="center">
 
                 <View
                     android:id="@+id/v_dot0"
@@ -59,11 +62,14 @@
             </LinearLayout>
         </LinearLayout>
     </FrameLayout>
-    <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
+
+    <TextView
+        android:id="@+id/section_label"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="123456"
-        android:layout_below="@+id/fl"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/fl"
+        android:text="123456" />
 
 </RelativeLayout>
