--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,13 +1,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_disconnecting" android:title="@string/disconnecting"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
+    <item
+        android:id="@+id/action_disconnecting"
         android:icon="@mipmap/disconnect"
-        android:orderInCategory="1" app:showAsAction="always" />
-    <item android:id="@+id/action_refresh" android:title="@string/refresh"
+        android:orderInCategory="1"
+        android:title="@string/disconnecting"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_refresh"
         android:icon="@mipmap/refresh"
-        android:orderInCategory="2" app:showAsAction="always" />
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+        android:orderInCategory="2"
+        android:title="@string/refresh"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_settings"
         android:icon="@mipmap/settings"
-        android:orderInCategory="3" app:showAsAction="ifRoom" />
+        android:orderInCategory="3"
+        android:title="@string/action_settings"
+        app:showAsAction="ifRoom" />
 </menu>
