--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,12 +6,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity$PlaceholderFragment">
+    tools:context=".HomeFragment">
 
     <FrameLayout
         android:id="@+id/fl"
-        android:layout_width="fill_parent"
-        android:layout_height="140dip">
+        android:layout_width="match_parent"
+        android:layout_height="140dp">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vp"
@@ -20,7 +20,7 @@
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="35dip"
+            android:layout_height="35dp"
             android:layout_gravity="bottom"
             android:background="#33000000"
             android:gravity="center"
@@ -30,13 +30,13 @@
                 android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="中国家庭院校园区域名字体现"
+                android:text="@string/hello_world"
                 android:textColor="#ffffff" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dip"
+                android:layout_marginTop="3dp"
                 android:gravity="center">
 
                 <View
@@ -70,6 +70,13 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/fl"
-        android:text="123456" />
+        android:text="@string/title_section1" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/latestList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/section_label"
+        android:scrollbars="vertical" />
 
 </RelativeLayout>
