--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,15 +2,21 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="actionBarStyle">@style/MyActionBar</item>
+    </style>
+
+    <style name="MyActionBar" parent="@style/Widget.AppCompat.Light.ActionBar">
+        <item name="background">@color/black</item>
+        <item name="backgroundStacked">@color/royalblue</item>
+        <item name="backgroundSplit">@color/white</item>
     </style>
 
     <style name="dot_style">
-        <item name="android:layout_width">5dip</item>
-        <item name="android:layout_height">5dip</item>
+        <item name="android:layout_width">5dp</item>
+        <item name="android:layout_height">5dp</item>
         <item name="android:background">@drawable/dot_normal</item>
-        <item name="android:layout_marginLeft">1.5dip</item>
-        <item name="android:layout_marginRight">1.5dip</item>
+        <item name="android:layout_marginLeft">1.5dp</item>
+        <item name="android:layout_marginRight">1.5dp</item>
     </style>
 
 </resources>
