--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,21 +3,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
+        android:id="@+id/action_search"
+        android:actionViewClass="android.support.v7.widget.SearchView"
+        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
+        android:orderInCategory="1"
+        android:title="@string/action_search"
+        app:showAsAction="collapseActionView|ifRoom" />
+    <item
         android:id="@+id/action_disconnecting"
         android:icon="@mipmap/disconnect"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         android:title="@string/disconnecting"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
+
         android:id="@+id/action_refresh"
         android:icon="@mipmap/refresh"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         android:title="@string/refresh"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_settings"
         android:icon="@mipmap/settings"
-        android:orderInCategory="3"
+        android:orderInCategory="4"
         android:title="@string/action_settings"
         app:showAsAction="ifRoom" />
 </menu>
