--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,7 +8,7 @@
         android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
         android:orderInCategory="1"
         android:title="@string/action_search"
-        app:showAsAction="collapseActionView|ifRoom" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_disconnecting"
         android:icon="@mipmap/disconnect"
