--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -1,12 +1,3 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
-    <item
-        android:id="@+id/action_search"
-        android:actionViewClass="android.support.v7.widget.SearchView"
-        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
-        android:orderInCategory="1"
-        android:title="@string/action_search"
-        app:showAsAction="collapseActionView|ifRoom" />
+<menu xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.SearchActivity">
 </menu>
