--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <item name="background">@color/black</item>
         <item name="backgroundStacked">@color/royalblue</item>
         <item name="backgroundSplit">@color/white</item>
+        <item name="android:logo">@mipmap/ic_launcher</item>
     </style>
 
     <style name="dot_style">
