--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
 
     <style name="MyActionBar" parent="@style/Widget.AppCompat.Light.ActionBar">
         <item name="background">@color/black</item>
-        <item name="backgroundStacked">@color/royalblue</item>
+        <item name="backgroundStacked">@color/royal_blue</item>
         <item name="backgroundSplit">@color/white</item>
         <item name="android:logo">@mipmap/ic_launcher</item>
     </style>
