--- a/app/src/main/res/xml/news_list_widget_info.xml
+++ b/app/src/main/res/xml/news_list_widget_info.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/news_widget"
-    android:minHeight="198dp"
+    android:label="Earthquakes"
+    android:minHeight="150dp"
     android:minWidth="250dp"
-    android:previewImage="@mipmap/ic_launcher"
     android:resizeMode="vertical"
-    android:updatePeriodMillis="86400000" /><!--android:widgetCategory="home_screen"--><!--android:initialKeyguardLayout="@layout/news_widget"-->
+    android:updatePeriodMillis="86400000" />
